change communication architecture CM_PS

--- a/Sketch/cm-server.conf
+++ b/Sketch/cm-server.conf
@@ -4,7 +4,7 @@
 SYS_TYPE	SERVER
 
 # communication architecture (CM_CS/CM_PS)
-COMM_ARCH	CM_CS
+COMM_ARCH	CM_PS
 
 # default server configuration
 SERVER_ADDR	localhost
